updated java options